# orb

./: .gitignore  .mailmap  .travis.yml  CHANGES  HISTORY  Makefile  Makefile.am  Makefile.gappkg  Makefile.in  PackageInfo.g  PackageInfoFor4.5.g  README  README.md  TEST  TODO  VERSION  _config.yml  aclocal.m4  configure  configure.ac  init.g  libtool  makedoc.g  orb.md  read.g
.github/workflows/: CI.yml
_data/: package.yml
cnf/: pkgconfig.h.in
doc/: avl.xml  basic.xml  bysuborbit.xml  cache.xml  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap10.html  chap10.txt  chap10_mj.html  chap11.html  chap11.txt  chap11_mj.html  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chap4.html  chap4.txt  chap4_mj.html  chap5.html  chap5.txt  chap5_mj.html  chap6.html  chap6.txt  chap6_mj.html  chap7.html  chap7.txt  chap7_mj.html  chap8.html  chap8.txt  chap8_mj.html  chap9.html  chap9.txt  chap9_mj.html  (+16 more)
examples/: Co1OrbitOnF2d24.g  Co1OrbitOnF5d24.g  Co1OrbitOnPF2d24.g  Co1OrbitOnPF5d24.g  M11OrbitOnPF3d10.g  M11OrbitOnPF3d24.g  M11OrbitPrepare.g  co1basech  co1reps.cmat  findpermrep.g  m11basech.cmat  orbintersectionmats.g  slpco1.g
examples/bmF2d4370/: BMOrbitOnF2d4370.g  BMOrbitOnF2d4370partI.g  BMOrbitOnF2d4370partII.g
examples/co1F5d24/: Co1OrbitOnF5d24.g  Co1OrbitOnPF5d24.findall.g  Co1OrbitOnPF5d24.g  co1interestingvecs.cmat  slpco1.g
examples/fi23m7/: GOrbitByKOrbitsPrepare.g  GOrbitByKOrbitsSearch35.g  fi23.1494.2.t
examples/m11PF3d24/: M11OrbitOnPF3d24.g  m11basech.cmat  m11chain.g  m11slps.g  orbintersectionmats.g
gap/: avltree.gd  avltree.gi  bysuborbit.gd  bysuborbit.gi  cache.gd  cache.gi  gap4r4.g  graveyard.g  hash.gd  hash.gi  homwdata.gd  homwdata.gi  nicequotfinder.g  orbits.gd  orbits.gi  picklers.gi  quotfinder.gd  quotfinder.gi  realrandom.gd  realrandom.gi  search.gd  search.gi  transform.gd  transform.gi
genss/: PackageInfo.g
m4/: ac_find_gap.m4
scripts/: build_gap.sh
src/: orb.c  orbconfig.h.in
test/: GOrbitByKOrbitsPrepare.g  GOrbitByKOrbitsSearch35.g  chainworker.g  fi23.1494.1.t  fi23m7.g
tst/: avl.tst  avltest.g  bugfix.tst  cache.tst  hash.tst  m22f2d34p231.g  m22f2d34p443520.g  m22p770.g  m22p770.tst  orb01.tst  orb02.tst  orbitspeedtest.g  testall.g
tst/m11PF3d24/: M11OrbitOnPF3d24.tst
